@@ -36,18 +36,23 @@ IF (UNIX)
 ENDIF (UNIX)
 
 IF ( NNFW_CONFIG MATCHES shared )
-    ADD_LIBRARY( nnfw SHARED ${NNFW_SRCS} ${NNFW_HDRS} NNFWConfig.cmake)
+    ADD_LIBRARY( nnfw SHARED ${NNFW_SRCS} ${NNFW_HDRS} ${NNFW_BINARY_DIR}/NNFWConfig.cmake GPL.txt CHANGELOG COPYING CREDITS INSTALL README RELEASENOTES )
 	IF( CMAKE_CACHE_MAJOR_VERSION EQUAL 2 AND CMAKE_CACHE_MINOR_VERSION LESS 5 )
 		INSTALL( TARGETS nnfw LIBRARY DESTINATION ${LIB_DIR} )
 	ELSE( CMAKE_CACHE_MAJOR_VERSION EQUAL 2 AND CMAKE_CACHE_MINOR_VERSION LESS 5 )
-		INSTALL( TARGETS nnfw LIBRARY DESTINATION ${LIB_DIR} FRAMEWORK DESTINATION /Library/Frameworks )
-		SET_TARGET_PROPERTIES( nnfw PROPERTIES
-			FRAMEWORK TRUE
-			FRAMEWORK_VERSION "${VER_MAJ}.${VER_MIN}"
-			PRIVATE_HEADER ""
-			PUBLIC_HEADER "${NNFW_HDRS}"
-			RESOURCE "NNFWConfig.cmake"
-		)
+		IF( APPLE )
+			INSTALL( TARGETS nnfw LIBRARY DESTINATION Library/Frameworks FRAMEWORK DESTINATION Library/Frameworks )
+			SET_TARGET_PROPERTIES( nnfw PROPERTIES
+				FRAMEWORK TRUE
+				FRAMEWORK_VERSION "${VER_MAJ}.${VER_MIN}"
+				PRIVATE_HEADER ""
+				PUBLIC_HEADER "${NNFW_HDRS}"
+				RESOURCE "NNFWConfig.cmake;GPL.txt;CHANGELOG;COPYING;CREDITS;INSTALL;README;RELEASENOTES"
+			)
+			SET( USE_FRAMEWORKS TRUE )
+		ELSE( APPLE )
+			INSTALL( TARGETS nnfw LIBRARY DESTINATION ${LIB_DIR} )
+		ENDIF( APPLE )
 	ENDIF( CMAKE_CACHE_MAJOR_VERSION EQUAL 2 AND CMAKE_CACHE_MINOR_VERSION LESS 5 )
 ELSE ( NNFW_CONFIG MATCHES shared )
     ADD_LIBRARY( nnfw STATIC ${NNFW_SRCS} )
@@ -65,7 +70,8 @@ IF (WIN32)
 	INSTALL( FILES "${NNFW_SOURCE_DIR}/INSTALL" DESTINATION . )
 	INSTALL( FILES "${NNFW_SOURCE_DIR}/README" DESTINATION . )
 	INSTALL( FILES "${NNFW_SOURCE_DIR}/RELEASENOTES" DESTINATION . )
-ELSE (WIN32)
+	INSTALL( FILES ${NNFW_HDRS} DESTINATION include/nnfw )
+ELSEIF( NOT USE_FRAMEWORKS )
 	INSTALL( FILES "${NNFW_SOURCE_DIR}/GPL.txt" DESTINATION share/nnfw )
 	INSTALL( FILES "${NNFW_SOURCE_DIR}/CHANGELOG" DESTINATION share/nnfw )
 	INSTALL( FILES "${NNFW_SOURCE_DIR}/COPYING" DESTINATION share/nnfw )
@@ -73,8 +79,8 @@ ELSE (WIN32)
 	INSTALL( FILES "${NNFW_SOURCE_DIR}/INSTALL" DESTINATION share/nnfw )
 	INSTALL( FILES "${NNFW_SOURCE_DIR}/README" DESTINATION share/nnfw )
 	INSTALL( FILES "${NNFW_SOURCE_DIR}/RELEASENOTES" DESTINATION share/nnfw )
+	INSTALL( FILES ${NNFW_HDRS} DESTINATION include/nnfw )
 ENDIF (WIN32)
-INSTALL( FILES ${NNFW_HDRS} DESTINATION include/nnfw )
 
 ### Setting Compiler g++ for linux machines
 IF (UNIX)
@@ -115,9 +121,6 @@ ENDIF (UNIX)
 
 ### create the nnfw-config script
 IF (UNIX)
-	INSTALL( PROGRAMS ${NNFW_BINARY_DIR}/nnfw-config DESTINATION bin )
-    ## prefix
-    STRING( REPLACE "/" "\\/" PREF "${CMAKE_INSTALL_PREFIX}" )
     ## CFLAGS
     IF ( NNFW_CONFIG MATCHES double )
         SET( CFLA " -DNNFW_DOUBLE_PRECISION " )
@@ -125,37 +128,47 @@ IF (UNIX)
     IF ( NNFW_CONFIG MATCHES mkl )
 		SET( CFLA "${CFLA} -I${MKL_PATH}" )
 	ENDIF ( NNFW_CONFIG MATCHES mkl )
-	STRING( REPLACE "/" "\\/" CFL "${CFLA}" )
+	## include directory
+	IF( APPLE )
+		SET( INCLUDES "${CMAKE_INSTALL_PREFIX}/Library/Frameworks/nnfw.framework/Headers" )
+	ELSE( APPLE )
+		SET( INCLUDES "${CMAKE_INSTALL_PREFIX}/include" )
+	ENDIF( APPLE )
     ## Library
 	IF ( NNFW_CONFIG MATCHES shared )
 		IF ( NNFW_CONFIG MATCHES mkl )
 			SET( LFLA "-Wl,-rpath,${MKL_PATH}/../lib/32 -L${MKL_PATH}/../lib/32 -lvml " )
 		ENDIF ( NNFW_CONFIG MATCHES mkl )
-		IF (APPLE)
-			SET( LFLA "-Wl,-rpath,${CMAKE_INSTALL_PREFIX}/${LIB_DIR} ${LFLA}" )
-		ELSE (APPLE)
-			SET( LFLA "-Wl,-rpath,${CMAKE_INSTALL_PREFIX}/${LIB_DIR} ${LFLA}" )
+		IF( USE_FRAMEWORKS )
+			SET( LFLA "-F${CMAKE_INSTALL_PREFIX}/Library/Frameworks -framework nnfw -Wl,-rpath,${CMAKE_INSTALL_PREFIX}/Library/Frameworks/nnfw.framework ${LFLA}" )
+		ELSE( USE_FRAMEWORKS )
+			SET( LFLA "-L${CMAKE_INSTALL_PREFIX}/lib -lnnfw -Wl,-rpath,${CMAKE_INSTALL_PREFIX}/${LIB_DIR} ${LFLA}" )
 		ENDIF (APPLE)
 	ELSE ( NNFW_CONFIG MATCHES shared )
         EXEC_PROGRAM( gsl-config ARGS --libs-without-cblas OUTPUT_VARIABLE GSL_ELIB )
 		IF ( NNFW_CONFIG MATCHES mkl )
 			SET( LFLA "-Wl,-rpath,${MKL_PATH}/../lib/32 -L${MKL_PATH}/../lib/32 -lmkl -lvml " )
 		ENDIF ( NNFW_CONFIG MATCHES mkl )
-		IF (APPLE)
-			SET( LFLA "${LFLA} ${GSL_ELIB} -F${QT_LIBRARY_DIR} -framework QtXml" )
-		ELSE (APPLE)
-			SET( LFLA "${LFLA} ${GSL_ELIB} -L${QT_LIBRARY_DIR} -lQtXml" )
-		ENDIF (APPLE)
+		IF( APPLE )
+			SET( LFLA "-L${CMAKE_INSTALL_PREFIX}/lib -lnnfw ${LFLA} ${GSL_ELIB} -F${QT_LIBRARY_DIR} -framework QtXml" )
+		ELSE( APPLE )
+			SET( LFLA "-L${CMAKE_INSTALL_PREFIX}/lib -lnnfw ${LFLA} ${GSL_ELIB} -L${QT_LIBRARY_DIR} -lQtXml" )
+		ENDIF( APPLE )
 	ENDIF ( NNFW_CONFIG MATCHES shared )
-    STRING( REPLACE "/" "\\/" LFL "${LFLA}" )
 
-	INSTALL( FILES "${NNFW_BINARY_DIR}/NNFWConfig.cmake" DESTINATION include/nnfw )
+	CONFIGURE_FILE( ${NNFW_SOURCE_DIR}/bin/nnfw-config_template ${NNFW_BINARY_DIR}/nnfw-config @ONLY IMMEDIATE )
 	CONFIGURE_FILE( ${NNFW_SOURCE_DIR}/NNFWConfig.cmake ${NNFW_BINARY_DIR}/NNFWConfig.cmake @ONLY IMMEDIATE )
-	INSTALL( FILES "${NNFW_SOURCE_DIR}/FindNNFW.cmake" DESTINATION ${CMAKE_ROOT}/Modules )
 
-    ADD_CUSTOM_COMMAND( TARGET nnfw POST_BUILD
-        COMMAND sed 's/version=".*"/version="${VER_MAJ}.${VER_MIN}.${VER_PAT}"/' ${NNFW_SOURCE_DIR}/bin/nnfw-config_template | sed 's/nnfwconfig=".*"/nnfwconfig="${NNFW_CONFIG}"/' | sed 's/prefix=".*"/prefix="${PREF}"/' | sed 's/^cflags=".*"/cflags="${CFL}"/' | sed 's/LIBS=".*"/LIBS="${LFL}"/' | sed 's/libdir=".*"/libdir="${PREF}\\/${LIB_DIR}"/' > nnfw-config 
-    )
+IF( USE_FRAMEWORKS )
+	ADD_CUSTOM_COMMAND( TARGET nnfw POST_BUILD
+		COMMAND chmod +x nnfw-config
+		COMMAND cp nnfw-config nnfw.framework
+	)
+ELSE( USE_FRAMEWORKS )
+	INSTALL( FILES "${NNFW_BINARY_DIR}/NNFWConfig.cmake" DESTINATION include/nnfw )
+	INSTALL( PROGRAMS ${NNFW_BINARY_DIR}/nnfw-config DESTINATION bin )
+	INSTALL( FILES "${NNFW_SOURCE_DIR}/FindNNFW.cmake" DESTINATION ${CMAKE_ROOT}/Modules )
+ENDIF( USE_FRAMEWORKS )
 ENDIF (UNIX)
 
 ### Setting For Win32 machines
