@@ -3,13 +3,16 @@ IF (NOT NNFW_FOUND)
 MESSAGE(STATUS "Using NNFW version @VER_MAJ@.@VER_MIN@.@VER_PAT@")
 MESSAGE(STATUS "Apply the Macro TARGET_USE_NNFW(targetname) for use NNFW")
 
+SET( NNFW_CONFIG @NNFW_CONFIG@ )
+SET( USE_FRAMEWORKS @USE_FRAMEWORKS@ )
+
 MACRO( TARGET_USE_NNFW targetname )
 
 GET_TARGET_PROPERTY( OLD1 ${targetname} COMPILE_FLAGS )
 IF ( OLD1 MATCHES NOTFOUND )
 	SET( OLD1 "" )
 ENDIF( OLD1 MATCHES NOTFOUND )
-SET_TARGET_PROPERTIES( ${targetname} PROPERTIES COMPILE_FLAGS "${OLD1} -I@CMAKE_INSTALL_PREFIX@/include @CFLA@" )
+SET_TARGET_PROPERTIES( ${targetname} PROPERTIES COMPILE_FLAGS "${OLD1} -I@INCLUDES@ @CFLA@" )
 
 GET_TARGET_PROPERTY( OLD2 ${targetname} LINK_FLAGS )
 IF ( OLD2 MATCHES NOTFOUND )
@@ -17,7 +20,9 @@ IF ( OLD2 MATCHES NOTFOUND )
 ENDIF( OLD2 MATCHES NOTFOUND )
 SET_TARGET_PROPERTIES( ${targetname} PROPERTIES LINK_FLAGS "${OLD2} @LFLA@" )
 
-TARGET_LINK_LIBRARIES( ${targetname} "nnfw" )
+IF( NOT USE_FRAMEWORKS )
+	TARGET_LINK_LIBRARIES( ${targetname} "nnfw" )
+ENDIF( NOT USE_FRAMEWORKS )
 
 ENDMACRO(TARGET_USE_NNFW)
 
